# dattavani-asr

./: .env.template  .gitignore  BUILD_SUCCESS.md  CI_CD_GUIDE.md  COMMIT_MESSAGE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB_REPO_SUCCESS.md  LICENSE  Makefile  OAUTH_WORKFLOW_BYPASS_GUIDE.md  PHASE2_IMPLEMENTATION.md  PLUGGABLE_MODELS.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SIMPLIFIED_ARCHITECTURE.md  dattavani-asr.toml.template  debug_application.sh  models.toml  monitor_current_process.sh  monitor_gpu_transcription.sh  monitor_stats.sh  setup.sh  shanishanti-live-23-aug-25_native.txt  test_audio.aiff  test_audio.txt  test_audio_native.txt  test_capture.sh  yttl.sh
.github/: SETUP_SECRETS.md
.github/workflows/: ci-cd.yml  deploy.yml  qa-status.yml  rollback.yml  staging.yml  test.yml
aws-deployment/: README.md  deploy.sh  docker-compose.yml  manage-infrastructure.sh
aws-deployment/monitoring/: prometheus.yml
aws-deployment/nginx/: default.conf
examples/: kannada_transcription_example.rs
github-issues/: master-performance-optimization.md  phase-1-quick-wins.md  phase-2-native-implementation.md  phase-3-advanced-optimizations.md  phase-4-production-ready.md
model_cache/: cache_index.json
model_cache/openai_whisper-base/: config.json  model.safetensors  tokenizer.json
qa-agent/: CI_INTEGRATION.md  QA_AGENT_SUMMARY.md  QA_VERIFICATION_REPORT.md  README.md  qa_agent.py  qa_dashboard.py  requirements.txt  run_qa.sh
qa-agent/config/: qa_config.toml
qa-agent/scripts/: aggregate_qa_results.py  generate_qa_badge.py  performance_benchmark.py  security_check.py
scripts/: README.md  compile-windows.bat  install-amazon-linux.sh  install-debian.sh  install-linux.sh  install-macos.sh  install-windows-manual.bat  install-windows.ps1  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1
src/: lib.rs  main.rs
tests/: integration_tests.rs
(+16 files in other folders)
